--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,6 +75,16 @@ dependencies:
   permission_handler: ^12.0.0+1
   
 dev_dependencies:
+  flutter_launcher_icons: ^0.13.1
+
+flutter_icons:
+  android: "ic_launcher"
+  ios: true
+  image_path: "assets/images/icon.png"
+  adaptive_icon_background: "#FFFFFF"
+  adaptive_icon_foreground: "assets/images/icon.png"
+  remove_alpha_ios: true
+  min_sdk_android: 21
   flutter_test:
     sdk: flutter
 
