--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,8 @@ dependencies:
   firebase_auth: ^4.16.0
   material_design_icons_flutter: ^7.0.7296
   firebase_storage: ^11.6.0
+  firebase_messaging: ^14.7.10  # For push notifications
+  flutter_local_notifications: ^16.3.0  # For handling notifications in the app
   url_launcher: ^6.3.1
   go_router: ^15.0.0
   uuid: ^4.0.0  # For generating unique IDs
