--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,7 +63,7 @@ dependencies:
   cloud_firestore: ^4.14.0
   firebase_auth: ^4.16.0
   material_design_icons_flutter: ^7.0.7296
-  firebase_storage: ^11.6.0
+  firebase_storage: ^11.6.5
   firebase_messaging: ^14.7.10  # For push notifications
   flutter_local_notifications: ^16.3.0  # For handling notifications in the app
   url_launcher: ^6.3.1
@@ -75,6 +75,7 @@ dependencies:
   audioplayers: ^6.4.0
   path_provider: ^2.1.5
   permission_handler: ^12.0.0+1
+  flutter_image_compress: ^2.4.0
   
 dev_dependencies:
   flutter_launcher_icons: ^0.13.1
