--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,7 +65,7 @@ dependencies:
   material_design_icons_flutter: ^7.0.7296
   firebase_storage: ^11.6.5
   firebase_messaging: ^14.7.10  # For push notifications
-  flutter_local_notifications: ^16.3.0  # For handling notifications in the app
+  # flutter_local_notifications: ^14.1.5  # For handling notifications in the app - COMMENTED OUT DUE TO BUILD ISSUES
   url_launcher: ^6.3.1
   go_router: ^15.0.0
   uuid: ^4.0.0  # For generating unique IDs
@@ -75,7 +75,7 @@ dependencies:
   audioplayers: ^6.4.0
   path_provider: ^2.1.5
   permission_handler: ^12.0.0+1
-  flutter_image_compress: ^2.4.0
+  # flutter_image_compress: ^2.4.0  # COMMENTED OUT DUE TO BUILD ISSUES
   
 dev_dependencies:
   flutter_launcher_icons: ^0.13.1
