--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   photo_view: ^0.14.0
   flutter_pdfview: ^1.3.2
   file_selector: ^1.0.2
+  image_gallery_saver: ^2.0.3  # For saving images to gallery
   
   # Optional but useful
   http: ^1.1.0  # For API requests
